--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                     <h2></h2>
                 </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <div class="fill" style="background-image:url('img/slides/flask.png');">
                 </div>
                 <div class="carousel-caption">
                   <h1>Flask</h1>
                     <h2>19/08/17</h2>
                 </div>
-            </div>
+            </div> -->
             <div class="item">
                 <div class="fill" style="background-image:url('img/slides/django.png');">
                 </div>
                 <div class="carousel-caption">
                   <h1>Django</h1>
-                    <h2>Em breve</h2>
+                    <h2>23/09/17</h2>
                 </div>
             </div>
             <!-- <div class="item">
@@ -560,55 +560,7 @@
 
 </div><!-- /TYPE PANEL -->
 
-<!-- 09 Web Scraping -->
 
-<div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div class="widget-trigger widget-head btn-blue" data-target-id="9"> <!-- HEAD PANEL -->
-    <h4 class="mytitle">
-      <img src="img/scrapy.png" alt="" height="30px">
-      <span class="lead">Web Scraping</span>
-    </h4>
-  </div><!-- /HEAD PANEL -->
-
-  <div class="widget-body"> <!-- CONTENT PANEL -->
-    <div class="row">
-      <div class="col-md-3">
-        <img src="img/web_scraper.png" alt="">
-      </div>
-      <div class="col-md-9">
-        <h4>
-          <i class="fa fa-github fa-2x"></i>
-          <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/web-scraping.md" target="_blank">
-          <span>Web Scraping</span></a>
-        </h4>
-        <!-- <h5>
-          <i class="fa fa-meetup fa-2x"></i>
-          <a href="" target="_blank"> /17</a>
-        </h5>
-        <h4>
-          <i class="fa fa-book fa-2x"></i>
-          <a href="" target="_blank">Material</a>
-        </h4> -->
-      </div>
-    </div>
-  </div><!-- /CONTENT PANEL -->
-
-  <div class="widget-footer"><!-- FOOTER PANEL-->
-    <div class="lfooter">
-      <!-- <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i> -->
-      <i class="fa fa-github"></i>
-    </div>
-    <div class="gfa">
-      <i class="fa fa-minus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-MINUS-CIRCLE"></i>
-      <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
-      <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
-      <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-    </div>
-  </div><!-- /FOOTER PANEL-->
-
-</div><!-- /TYPE PANEL -->
 
 
 <!-- 11 Django -->
@@ -632,11 +584,11 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/django.md" target="_blank">
           <span>Django</span></a>
         </h4>
-        <!-- <h5>
+        <h5>
           <i class="fa fa-meetup fa-2x"></i>
-          <a href="" target="_blank"> /17</a>
+          <a href="http://meetu.ps/3d8BJt" target="_blank"> 23/09/17</a>
         </h5>
-        <h4>
+        <!-- <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
         </h4> -->
@@ -646,8 +598,8 @@
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <!-- <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i> -->
+      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -683,6 +635,56 @@
           <i class="fa fa-github fa-2x"></i>
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/fazendo-deploy-do-seu-projeto-no-heroku.md" target="_blank">
           <span>Fazendo Deploy do seu projeto no Heroku</span></a>
+        </h4>
+        <!-- <h5>
+          <i class="fa fa-meetup fa-2x"></i>
+          <a href="" target="_blank"> /17</a>
+        </h5>
+        <h4>
+          <i class="fa fa-book fa-2x"></i>
+          <a href="" target="_blank">Material</a>
+        </h4> -->
+      </div>
+    </div>
+  </div><!-- /CONTENT PANEL -->
+
+  <div class="widget-footer"><!-- FOOTER PANEL-->
+    <div class="lfooter">
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
+      <i class="fa fa-github"></i>
+    </div>
+    <div class="gfa">
+      <i class="fa fa-minus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-MINUS-CIRCLE"></i>
+      <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
+      <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
+      <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+    </div>
+  </div><!-- /FOOTER PANEL-->
+
+</div><!-- /TYPE PANEL -->
+
+<!-- 09 Web Scraping -->
+
+<div class="widget widget-gray"> <!-- TYPE PANEL -->
+  <div class="widget-trigger widget-head btn-blue" data-target-id="9"> <!-- HEAD PANEL -->
+    <h4 class="mytitle">
+      <img src="img/scrapy.png" alt="" height="30px">
+      <span class="lead">Web Scraping</span>
+    </h4>
+  </div><!-- /HEAD PANEL -->
+
+  <div class="widget-body"> <!-- CONTENT PANEL -->
+    <div class="row">
+      <div class="col-md-3">
+        <img src="img/web_scraper.png" alt="">
+      </div>
+      <div class="col-md-9">
+        <h4>
+          <i class="fa fa-github fa-2x"></i>
+          <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/web-scraping.md" target="_blank">
+          <span>Web Scraping</span></a>
         </h4>
         <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
